upgrade to jdk 24 and new rachability metadata